<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS exercise</string>
    <string name="action_settings">Settings</string>
    <string name="no_value">-</string>
    <string name="hello_world">Hello world!</string>
    <string name="speed_title">SPEED</string>
    
    <string name="top_speed_title">TOP SPEED</string>
     <string name="distance_title">DISTANCE</string>
    
    <string name="button_start_or_pause_exercise_start_title">Start</string>
    <string name="button_stop_exercise_title">Stop</string>

    
    <string name="speed_metric_unit">km/h</string>
    <string name="distance_metric_unit">km</string>
    <string name="pace_title">PACE</string>
    <string name="pace_metric_unit">time for km</string>

</resources>
