<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pace_backgroud" >

    <TextView
        android:id="@+id/textView_pace_value"
        style="@style/textViewStyleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_value" />

    <TextView
        android:id="@+id/textView_pace_title"
        style="@style/textViewStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pace_title" />

    <TextView
        android:id="@+id/textView_pace_unit"
        style="@style/textViewStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pace_metric_unit" />

</RelativeLayout>